# my-python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: __main__.py  cli.py
